# DRL_Velocity_Obstacles

./: README.md  my_requirements.txt  run_drl_vo_navigation_demo.sh  run_drl_vo_policy_training_desktop.sh
cnn_msgs/: CMakeLists.txt  package.xml
cnn_msgs/msg/: CNN_data.msg
drl_vo/launch/: drl_vo_train.launch.py
drl_vo/src/: cmd_vel_pub.py  cnn_data_pub.py  custom_cnn_full.py  drl_vo_inference.py  drl_vo_train.py
drl_vo/src/turtlebot_gym/: setup.py
drl_vo/src/turtlebot_gym/turtlebot_gym/envs/: drl_nav_env.py  gazebo_connection.py  test_observation_function.py
install/: local_setup.sh  setup.sh
install/cnn_msgs/include/cnn_msgs/cnn_msgs/msg/: cnn_data.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h
install/cnn_msgs/include/cnn_msgs/cnn_msgs/msg/detail/: cnn_data__functions.c  cnn_data__functions.h  cnn_data__rosidl_typesupport_fastrtps_cpp.hpp  cnn_data__rosidl_typesupport_introspection_c.h  cnn_data__rosidl_typesupport_introspection_cpp.hpp  cnn_data__struct.h  cnn_data__struct.hpp  cnn_data__traits.hpp  cnn_data__type_support.h
install/cnn_msgs/local/lib/python3.10/dist-packages/cnn_msgs/: _cnn_msgs_s.ep.rosidl_typesupport_c.c
install/cnn_msgs/local/lib/python3.10/dist-packages/cnn_msgs-1.1.3-py3.10.egg-info/: PKG-INFO  top_level.txt
install/cnn_msgs/local/lib/python3.10/dist-packages/cnn_msgs/msg/: _cnn_data.py  _cnn_data_s.c
install/cnn_msgs/share/ament_index/resource_index/rosidl_interfaces/: cnn_msgs
install/cnn_msgs/share/cnn_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cnn_msgs/share/cnn_msgs/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  cnn_msgsConfig.cmake  cnn_msgs__rosidl_typesupport_introspection_cExport.cmake  cnn_msgs__rosidl_typesupport_introspection_cppExport.cmake  export_cnn_msgs__rosidl_typesupport_fastrtps_cExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/cnn_msgs/share/cnn_msgs/msg/: CnnData.idl  CnnData.msg
install/drl_vo/lib/drl_vo/: app3.py  drl_vo_inference.py  test.py  testvideo.py  track_data_pub.py
install/drl_vo/lib/drl_vo/track_utils/Tracking_Face/: find_distance.py  get_newdata.py
install/drl_vo/lib/drl_vo/track_utils/track_utils/: __init__.py
install/drl_vo/lib/drl_vo/track_utils/track_utils/Tracking_Face/yolov8_tracking/: filter.py  resize_video.py  test_huy.py  track.py  track_func.py  track_v1.py
install/drl_vo/lib/drl_vo/turtlebot_gym/turtlebot_gym.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
install/drl_vo/lib/drl_vo/turtlebot_gym/turtlebot_gym/envs/: __init__.py
install/drl_vo/share/ament_index/resource_index/package_run_dependencies/: drl_vo
install/drl_vo/share/drl_vo/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/track_ped_msgs/include/track_ped_msgs/track_ped_msgs/msg/: rosidl_typesupport_introspection_c__visibility_control.h  tracked_person.hpp  tracked_persons.h  tracked_persons.hpp
install/track_ped_msgs/include/track_ped_msgs/track_ped_msgs/msg/detail/: tracked_person__functions.c  tracked_person__functions.h  tracked_person__rosidl_typesupport_fastrtps_cpp.hpp  tracked_person__struct.h  tracked_person__struct.hpp  tracked_person__traits.hpp  tracked_person__type_support.h  tracked_persons__functions.c  tracked_persons__functions.h  tracked_persons__rosidl_typesupport_fastrtps_c.h  tracked_persons__traits.hpp  tracked_persons__type_support.cpp
install/track_ped_msgs/local/lib/python3.10/dist-packages/track_ped_msgs/: _track_ped_msgs_s.ep.rosidl_typesupport_introspection_c.c
install/track_ped_msgs/local/lib/python3.10/dist-packages/track_ped_msgs-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
install/track_ped_msgs/share/ament_index/resource_index/rosidl_interfaces/: track_ped_msgs
install/track_ped_msgs/share/track_ped_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/track_ped_msgs/share/track_ped_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  export_track_ped_msgs__rosidl_generator_pyExport.cmake  export_track_ped_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  track_ped_msgsConfig.cmake  track_ped_msgs__rosidl_typesupport_cExport-noconfig.cmake  track_ped_msgs__rosidl_typesupport_cExport.cmake  track_ped_msgs__rosidl_typesupport_cppExport-noconfig.cmake  track_ped_msgs__rosidl_typesupport_cppExport.cmake  track_ped_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake
install/track_ped_msgs/share/track_ped_msgs/msg/: TrackedPerson.idl
log/: latest_build
src/: run_drl_vo_policy_training_server.sh
src/cnn_msgs/: CMakeLists.txt
src/cnn_msgs/msg/: CnnData.msg
src/drl_vo/: CMakeLists.txt  package.xml
src/drl_vo/launch/: drl_vo_nav_train.launch.py
src/drl_vo/src/: cnn_data_pub.py  custom_cnn_full.py  drl_vo_inference.py  drl_vo_train.py  dynamic_goal_publisher.py  test.py  track_data_pub.py
src/drl_vo/src/track_utils/: environment.yaml  find_distance.py  requirements.txt
src/drl_vo/src/track_utils/Tracking_Face/yolov8_tracking/: .gitignore  README.md  evolve.py  track_v2_streaming.py  val.py
src/drl_vo/src/track_utils/Tracking_Face/yolov8_tracking/ultralytics/ultralytics/engine/: predictor.py
src/drl_vo/src/track_utils/Tracking_Face/yolov8_tracking/ultralytics/ultralytics/nn/: autobackend.py
src/drl_vo/src/track_utils/insightface/app/: face_analysis.py
src/drl_vo/src/track_utils/trackers/botsort/: gmc.py
src/drl_vo/src/track_utils/trackers/bytetrack/: byte_tracker.py
src/drl_vo/src/track_utils/trackers/deepocsort/: ocsort.py  reid_multibackend.py
src/drl_vo/src/turtlebot_gym/turtlebot_gym/envs/: drl_nav_env.py  test_observation_function.py
src/track_ped_msgs/: CMakeLists.txt  package.xml
src/track_ped_msgs/msg/: TrackedPerson.msg  TrackedPersons.msg
(+21 files in other folders)
