<?xml version="1.0"?>
<package format="3">
  <name>drl_vo</name>
  <version>0.0.1</version>
  <description>DRL Velocity Obstacles project</description>
  <maintainer email="your_email@example.com">James</maintainer>
  <license>BSD</license>

  <!-- ROS dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
