<?xml version="1.0"?>
<package format="3">
  <name>track_ped_msgs</name>
  <version>0.0.0</version>
  <description>Messages for tracking pedestrians</description>
  <maintainer email="anhoangle296@gmail.com">anlehoang</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Add this tag to mark the package as an interface package -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>
