<?xml version="1.0"?>
<package format="3">
    <!-- Package name -->
    <name>cnn_msgs</name>
    
    <!-- Version of the package -->
    <version>1.1.3</version>
    
    <!-- Description of the package -->
    <description>CNN Data Package</description>
    
    <!-- Maintainer of the package with email -->
    <maintainer email="anhoangle296@gmail.com">anhoangle296</maintainer>
    
    <!-- License type -->
    <license>BSD</license>
    
    <!-- Author of the package with email -->
    <author email="anhoangle296@gmail.com">anhoangle296</author>

    <!-- Build tool dependency for ROS 2 -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>


    <!-- Build dependencies required to build the package -->
    <build_depend>rosidl_default_generators</build_depend>
    <build_depend>std_msgs</build_depend>

    <!-- Runtime dependencies required to run the package -->
    <exec_depend>rosidl_default_runtime</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <!-- Dependencies required for testing the package -->
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <!-- Export section to specify additional build information -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
